[package]
name = "fbb_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.21.0", features = ["full"] }
stybulate = "1.1.2"
clap = { version = "3.2.21", features = ["derive"] }
progress_bar = "1.0.2"
