[package]
name = "hof"
version = "0.1.2"
edition = "2021"
authors = ["tomkolron"]
description = "Hacker one fetcher, fetch hacker one projects and get subdomains and heders for all scope domains."
license = "MIT"
homepage = "https://github.com/tomkolron/hof"
repository = "https://github.com/tomkolron/hof"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.21.0", features = ["full"] }
stybulate = "1.1.2"
clap = { version = "3.2.21", features = ["derive"] }
scraper = "0.13.0"
chrono = "0.4.22"
indicatif = "0.17.1"
