[package]
name = "hof"
version = "0.1.7"
edition = "2021"
authors = ["tomkolron"]
description = "Hacker one fetcher, fetch hacker one projects and get subdomains and heders for all scope domains."
license = "MIT"
homepage = "https://github.com/tomkolron/hof"
repository = "https://github.com/tomkolron/hof"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["full"] }
stybulate = "1.1"
clap = { version = "4.0", features = ["derive"] }
scraper = "0.13"
chrono = "0.4"
indicatif = "0.17"
